@startuml ManagerClasses
interface IActivity {
    +Erase()
    +IsEnabled(): bool
}

interface IBulletActivity {
    +Shot(speed: float; angle: float)
}

interface IEnemyActivity {
    +Spawned(speed: float; angle: float; hitPoint: int)
}

interface IPlayerActivity {
    +Spawned()
}

IActivity <|-- IBulletActivity
IActivity <|-- IEnemyActivity
IActivity <|-- IPlayerActivity

abstract MoverManager {
    -pool: List<(Mover, IsEnabled, FixedUpdate, Update)>
    +GenerateObject(id: ObjectID): Mover
}
note bottom of MoverManager
    Generics
end note

enum BulletID
class BulletManager
class Bullet

BulletManager ..> BulletID
BulletManager --|> MoverManager
Bullet "0..*" --o "1" BulletManager
IBulletActivity <|.. Bullet
Bullet "1" o-- BulletID

enum EnemyID
class EnemyManager
class Enemy

EnemyManager ..> EnemyID
EnemyManager --|> MoverManager
Enemy "0..*" --o "1" EnemyManager
IEnemyActivity <|.. Enemy
Enemy "1" o-- EnemyID

enum PlayerID

class PlayerManager

class Player

PlayerManager ..> PlayerID
PlayerManager --|> MoverManager
Player "0..*" --o "1" PlayerManager
IPlayerActivity <|.. Player
Player "1" o-- PlayerID

interface ICollisionHandler {
    -damage: int
    -hitPoint: int
    +GetDamage(): int
    +GetHitPoint(): int
    +SetHitPoint(hitPoint: int)
}

interface IPhysicalState {
    -angle: float
    -speed: float
    -rigidBody2D
    +GetPosition(): Vector2
    +SetPosition(position: Vector2)
    +GetAngle(): float
    +SetAngle(angle: float)
    +GetSpeed(): float
    +SetSpeed(speed: float)
}

abstract Mover
note right of Mover
    Wrapper class
end note

IActivity <|.. Mover
ICollisionHandler <|.. Mover
IPhysicalState <|.. Mover
Mover <|-- Bullet
Mover <|-- Enemy
Mover <|-- Player

interface IManagedBehaviour {
    +ManagedFixedUpdate()
    +ManagedUpdate()
}

abstract MonoBehaviour
note bottom of MonoBehaviour
    From Unity
end note

MoverManager ..|> IManagedBehaviour
MoverManager --|> MonoBehaviour

abstract MoverController {
    #{abstract} FixedUpdate()
}

IPhysicalState <|.. MoverController
Mover "1" o-- "1" MoverController : Delegate
MoverController ..|> IManagedBehaviour
MoverController --|> MonoBehaviour

/'class Activity {
    +Spawned()
}

Activity ..|> IActivity
Activity "1" --o "1" Mover

abstract CollisionHandler {
    #{abstract} OnTriggerEnter2D(other)
}

CollisionHandler ..|> ICollisionHandler
CollisionHandler "1" --o "1" Mover'/
@enduml